[package]
name = "hring"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hapsoc/hring"
documentation = "https://docs.rs/hring"
readme = "README.md"
description = """
An HTTP implementation on top of io_uring
"""

[dependencies]
eyre = "0.6.8"
futures = "0.3.24"
memmap2 = "0.5.7"
nom = "7.1.1"
pretty-hex = "0.3.0"
smallvec = { version = "1.10.0", features = ["const_generics", "const_new", "union", "debugger_visualizer"] }
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["macros", "io-util", "process"] }
# `as-raw-fd` branch
tokio-uring = { git = "https://github.com/fasterthanlime/tokio-uring", rev = "428529a3037e6c36680cfdfa3305c5a1709fb8bd" }
tracing = "0.1.37"

[dev-dependencies]
bytes = "1.2.1"
pretty_assertions = "1.3.0"
tokio-stream = "0.1.11"
tracing-subscriber = "0.3.16"
httparse = "1.8.0"

[profile.dev.package."*"]
opt-level = 2
