[package]
name = "hring"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hapsoc/hring"
documentation = "https://docs.rs/hring"
readme = "README.md"
description = """
An HTTP implementation on top of io_uring
"""

[dependencies]
byteorder = "1.4.3"
enum-repr = "0.2.6"
enumflags2 = "0.7.5"
eyre = { version = "0.6.8", default-features = false }
hpack = "0.3.0"
http = "0.2.8"
memchr = "2.5.0"
memmap2 = { version = "0.5.7", default-features = false }
nom = { version = "7.1.1", default-features = false }
pretty-hex = { version = "0.3.0", default-features = false }
smallvec = { version = "1.10.0", default-features = false, features = ["const_generics", "const_new", "union"] }
thiserror = { version = "1.0.37", default-features = false }
tokio = { version = "1.21.2", features = ["macros", "sync"] }
# `as-raw-fd` branch
tokio-uring = { git = "https://github.com/tokio-rs/tokio-uring", rev = "f81ba93" }
tracing = { version = "0.1.37", default-features = false }

[dev-dependencies]
bytes = { version = "1.2.1", default-features = false }
pretty_assertions = { version = "1.3.0", default-features = false, features = ["std"] }
tokio-stream = { version = "0.1.11", default-features = false }
tracing-subscriber = { version = "0.3.16", default-features = false, features = ["std", "fmt", "ansi"] }
httparse = { version = "1.8.0", default-features = false, features = ["std"] }
tokio = { version = "1.21.2", default-features = false, features = ["io-util", "process", "time"] }
futures-util = { version = "0.3.25", default-features = false, features = ["std"] }
curl = { version = "0.4.44", default-features = false, features = ["http2"] }

[profile.dev.package."*"]
opt-level = 2
