[project]
name = "loona"
version = "0.1.0"
description = "Scripts"
requires-python = ">=3.11"
dependencies = [
    "termcolor~=2.4.0",
    "pandas~=2.2.2",
    "openpyxl~=3.1.5",
]

[tool.setuptools]
packages = ["scripts"]

[tool.pyright]
include = ["scripts"]
exclude = [
    "**/__pycache__",
    "**/node_modules",
    ".venv",
]
venvPath = "."
venv = ".venv"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
