[package]
name = "sample-h2-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.3.0"
color-eyre = "0.6.2"
hyper = { version = "0.14.23", features = ["server", "http2", "tcp", "stream"] }
tokio = { version = "1.23.0", features = ["full"] }
tokio-stream = "0.1.11"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
