[package]
name = "b-x"
version = "1.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bearcove/loona"
documentation = "https://docs.rs/b-x"
readme = "README.md"
description = """
The stupidest boxed error ever
"""
rust-version = "1.75.0"

[dependencies]

[features]
default = []
