[package]
name = "buffet"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bearcove/loona"
documentation = "https://docs.rs/buffet"
readme = "README.md"
description = """
Thread-local buffer pool for the `loona` crate.
"""

rust-version = "1.75.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["uring"]
uring = ["dep:io-uring", "dep:luring"]
miri = []

[dependencies]
bytemuck = { version = "1.16.3", features = ["extern_crate_std"] }
http = "1.1.0"
libc = "0.2.155"
memchr = "2.7.4"
memmap2 = { version = "0.9.4", default-features = false }
nom = "7.1.3"
pretty-hex = "0.4.1"
send_wrapper = "0.6.0"
socket2 = "0.5.7"
thiserror = { version = "1.0.63", default-features = false }
tokio = { version = "1.39.2", features = [
    "sync",
    "macros",
    "rt",
    "io-util",
    "net",
    "time",
] }
tracing = "0.1.40"
nix = "0.29.0"
b-x = { version = "1.0.0", path = "../b-x" }

[target.'cfg(target_os = "linux")'.dependencies]
luring = { path = "../luring", version = "0.1.0", optional = true }
io-uring = { version = "0.6.4", optional = true }

[dev-dependencies]
pretty_assertions = "1.4.0"
