[package]
name = "fluke-buffet"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bearcove/fluke"
documentation = "https://docs.rs/fluke-buffet"
readme = "README.md"
description = """
Buffer management for the `fluke` crate.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["tokio-uring"]
tokio-uring = ["fluke-maybe-uring/tokio-uring"]
miri = []

[dependencies]
eyre = "0.6.12"
http = "1.1.0"
fluke-maybe-uring = { version = "0.1.1", path = "../fluke-maybe-uring", features = [
    "net",
] }
memchr = "2.7.1"
memmap2 = { version = "0.9.4", default-features = false }
nom = "7.1.3"
pretty-hex = "0.4.1"
thiserror = { version = "1.0.58", default-features = false }
tokio = { version = "1.36.0", features = ["sync", "macros", "rt", "io-util"] }
tracing = "0.1.40"

[dev-dependencies]
pretty_assertions = "1.4.0"
