[package]
name = "fluke-buffet"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bearcove/fluke"
documentation = "https://docs.rs/fluke-buffet"
readme = "README.md"
description = """
Buffer management for the `fluke` crate.
"""

rust-version = "1.75.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["tokio-uring"]
tokio-uring = ["dep:tokio-uring"]
miri = []

[dependencies]
bytemuck = { version = "1.15.0", features = ["extern_crate_std"] }
eyre = "0.6.12"
http = "1.1.0"
io-uring = "0.6.3"
fluke-io-uring-async = { path = "../fluke-io-uring-async", version = "0.1.0" }
libc = "0.2.153"
memchr = "2.7.1"
memmap2 = { version = "0.9.4", default-features = false }
nom = "7.1.3"
pretty-hex = "0.4.1"
send_wrapper = "0.6.0"
socket2 = "0.5.6"
thiserror = { version = "1.0.58", default-features = false }
tokio = { version = "1.36.0", features = [
    "sync",
    "macros",
    "rt",
    "io-util",
    "net",
] }
tracing = "0.1.40"

[target.'cfg(target_os = "linux")'.dependencies]
tokio-uring = { git = "https://github.com/tokio-rs/tokio-uring", rev = "a69d4bf57776a085a6516f4c022e2bf5d1814762", optional = true }

[dev-dependencies]
pretty_assertions = "1.4.0"
