[package]
name = "fluke-h2-parse"
version = "0.1.0"
edition = "2021"

[dependencies]
enum-repr = "0.2.6"
enumflags2 = "0.7.9"
nom = { version = "7.1.3", default-features = false }
fluke-buffet = { version = "0.1.0", path = "../fluke-buffet" }
thiserror = "1.0.60"
byteorder = "1.5.0"
tracing = "0.1.40"
