[package]
name = "fluke-h2-parse"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bearcove/fluke"
documentation = "https://docs.rs/fluke-h2-parse"
readme = "README.md"
description = """
HTTP/2 parser and base types
"""
rust-version = "1.75"

[dependencies]
enum-repr = "0.2.6"
enumflags2 = "0.7.9"
nom = { version = "7.1.3", default-features = false }
fluke-buffet = { version = "0.2.1", path = "../fluke-buffet" }
thiserror = "1.0.60"
byteorder = "1.5.0"
tracing = "0.1.40"
