[package]
name = "fluke-h2spec"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fluke = { version = "0.1.1", path = "../../crates/fluke", default-features = false, features = ["maybe-uring-net"] }
color-eyre = "0.6.2"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
which = "6.0.0"

[features]
default = ["tokio-uring"]
tokio-uring = ["fluke/tokio-uring"]
