[package]
name = "fluke-hyper-testbed"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bytes = "1.5.0"
futures = "0.3.30"
hyper = { version = "0.14.28", features = [
    "client",
    "server",
    "http1",
    "tcp",
    "stream",
] }
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = "0.1.14"
tracing = "0.1.40"

[profile.dev.package."*"]
opt-level = 2
