[package]
name = "fluke-hyper-testbed"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bytes = "1.7.1"
futures = "0.3.30"
hyper = { version = "0.14.30", features = [
    "client",
    "server",
    "http1",
    "tcp",
    "stream",
] }
tokio = { version = "1.39.2", features = ["full"] }
tokio-stream = "0.1.15"
tracing = "0.1.40"
