[package]
name = "fluke-hyper-testbed"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bytes = "1.7.1"
futures = "0.3.30"
http-body-util = "0.1.2"
hyper = { version = "1.4.1", features = ["client", "server", "http1", "http2"] }
hyper-util = { version = "0.1.7", features = [
    "server",
    "http1",
    "http2",
    "tokio",
] }
tokio = { version = "1.39.2", features = ["full"] }
tokio-stream = "0.1.15"
tracing = "0.1.40"
