[package]
name = "fluke-io-uring-async"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.2", features = ["rt", "net"] }
slab = { version = "0.4" }

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = { version = "0.6.3" }

[dev-dependencies]
send_wrapper = { version = "0.6.0" }
