[package]
name = "fluke-maybe-uring"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hapsoc/fluke"
documentation = "https://docs.rs/fluke-maybe-uring"
readme = "README.md"
description = """
Replicates some tokio-uring types to allow building code without it
"""
rust-version = "1.75.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["tokio-uring"]
net = ["tokio/net"]

[dependencies]
bytemuck = { version = "1.14.3", features = ["extern_crate_std"] }
tokio = { version = "1.36.0", features = ["rt", "sync", "io-util"] }

[target.'cfg(target_os = "linux")'.dependencies]
tokio-uring = { version = "0.4.0", optional = true }
