[package]
name = "fluke-maybe-uring"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bearcove/fluke"
documentation = "https://docs.rs/fluke-maybe-uring"
readme = "README.md"
description = """
Replicates some tokio-uring types to allow building code without it
"""
rust-version = "1.75.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["tokio-uring"]
net = ["tokio/net"]

[dependencies]
bytemuck = { version = "1.15.0", features = ["extern_crate_std"] }
tokio = { version = "1.36.0", features = ["rt", "sync", "io-util"] }

[target.'cfg(target_os = "linux")'.dependencies]
tokio-uring = { git = "https://github.com/tokio-rs/tokio-uring", rev = "a69d4bf57776a085a6516f4c022e2bf5d1814762", optional = true }
