[package]
name = "fluke-tls-sample"
version = "0.1.0"
edition = "2021"
description = "A sample HTTPS proxy using fluke"
publish = false

[dependencies]
color-eyre = "0.6.2"
fluke = { path = "../fluke" }
rcgen = "0.10.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
rustls = { version = "0.20.9", features = ["secret_extraction"] }
tokio = { version = "1.28.2", features = ["full"] }
tokio-rustls = "0.23.4"
http = "0.2.9"
pretty-hex = "0.3.0"
fluke-maybe-uring = { version = "0.1.0", path = "../fluke-maybe-uring" }
socket2 = "0.5.3"

[target.'cfg(target_os = "linux")'.dependencies]
ktls = "2.0.0"
