[package]
name = "fluke"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hapsoc/fluke"
documentation = "https://docs.rs/fluke"
readme = "README.md"
description = """
An HTTP implementation on top of io_uring
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["tokio-uring"]
tokio-uring = ["fluke-buffet/tokio-uring"]
maybe-uring-net = ["fluke-maybe-uring/net"]

[dependencies]
byteorder = "1.4.3"
enum-repr = "0.2.6"
enumflags2 = "0.7.7"
eyre = { version = "0.6.8", default-features = false }
futures-util = "0.3.28"
fluke-buffet = { version = "0.1.0", path = "../fluke-buffet" }
fluke-hpack = { version = "0.3.0", path = "../fluke-hpack" }
http = "0.2.9"
fluke-maybe-uring = { version = "0.1.1", path = "../fluke-maybe-uring" }
memchr = "2.5.0"
nom = { version = "7.1.3", default-features = false }
pretty-hex = { version = "0.3.0", default-features = false }
smallvec = { version = "1.10.0", default-features = false, features = ["const_generics", "const_new", "union"] }
thiserror = { version = "1.0.40", default-features = false }
tokio = { version = "1.28.2", features = ["macros", "sync"] }
tracing = { version = "0.1.37", default-features = false }

[dev-dependencies]
fluke-maybe-uring = { version = "0.1.1", path = "../fluke-maybe-uring", features = ["net"] }
bytes = { version = "1.4.0", default-features = false }
pretty_assertions = { version = "1.3.0", default-features = false, features = ["std"] }
tokio-stream = { version = "0.1.14", default-features = false }
tracing-subscriber = { version = "0.3.17", default-features = false, features = ["std", "fmt", "ansi"] }
httparse = { version = "1.8.0", default-features = false, features = ["std"] }
tokio = { version = "1.28.2", default-features = false, features = ["io-util", "process", "time"] }
futures-util = { version = "0.3.28", default-features = false, features = ["std"] }
libc = "0.2.146"
