[package]
name = "fluke"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bearcove/fluke"
documentation = "https://docs.rs/fluke"
readme = "README.md"
description = """
An HTTP implementation on top of io_uring
"""
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["uring"]
uring = ["fluke-buffet/uring"]

[dependencies]
byteorder = "1.5.0"
eyre = { version = "0.6.12", default-features = false }
futures-util = "0.3.30"
fluke-buffet = { version = "0.3.0", path = "../fluke-buffet" }
fluke-hpack = { version = "0.3.2", path = "../fluke-hpack" }
http = "1.1.0"
memchr = "2.7.4"
nom = { version = "7.1.3", default-features = false }
pretty-hex = { version = "0.4.1", default-features = false }
smallvec = { version = "1.13.2", default-features = false, features = [
    "const_generics",
    "const_new",
    "union",
] }
thiserror = { version = "1.0.63", default-features = false }
tokio = { version = "1.39.2", features = ["macros", "sync"] }
tracing = { version = "0.1.40", default-features = false }
fluke-h2-parse = { version = "0.2.0", path = "../fluke-h2-parse" }

[dev-dependencies]
fluke-buffet = { version = "0.3.0", path = "../fluke-buffet" }
bytes = { version = "1.7.1", default-features = false }
pretty_assertions = { version = "1.4.0", default-features = false, features = [
    "std",
] }
tokio-stream = { version = "0.1.15", default-features = false }
tracing-subscriber = { version = "0.3.18", default-features = false, features = [
    "std",
    "fmt",
    "ansi",
] }
httparse = { version = "1.9.4", default-features = false, features = ["std"] }
tokio = { version = "1.39.2", default-features = false, features = [
    "io-util",
    "process",
    "time",
] }
futures-util = { version = "0.3.30", default-features = false, features = [
    "std",
] }
libc = "0.2.155"
httpwg = { path = "../httpwg" }
color-eyre = "0.6.3"
httpwg-macros = { path = "../httpwg-macros" }
cargo-husky = { version = "1", features = ["user-hooks"] }
