[package]
name = "hring-h2spec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hring = { version = "0.1.0", path = "../../crates/hring", default-features = false }
color-eyre = "0.6.2"
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
which = "4.4.0"
maybe-uring = { version = "0.1.0", path = "../../crates/maybe-uring", features = ["net"] }

[features]
default = ["tokio-uring"]
tokio-uring = ["hring/tokio-uring", "maybe-uring/tokio-uring"]
