[package]
name = "hring-hpack"
version = "0.3.0"
authors = ["Marko Lalic <marko.lalic@gmail.com>", "Amos Wenger <amos@bearcove.net>"]
edition = "2021"

exclude = [
    "fixtures/*",
]

description = "A library implementing HPACK coding, for the hring project"
repository = "https://github.com/hapsoc/hring"
homepage = "https://github.com/hapsoc/hring"
readme = "README.md"
license = "MIT"
keywords = ["hpack", "http2", "encoding", "decoding"]
documentation = "https://docs.rs/hpack-hring"

[features]
# A feature defining some interop tests between the HPACK decoder and
# headers encoded by other libraries. It is only ever used in test builds!
interop_tests = ["rustc-serialize"]

[dependencies]
tracing = "0.1"

[dependencies.rustc-serialize]
version = "^0.3"
optional = true
