[package]
name = "hring-hpack"
version = "0.3.0"
authors = ["Marko Lalic <marko.lalic@gmail.com>", "Amos Wenger <amos@bearcove.net>"]
edition = "2021"

exclude = [
    "fixtures/*",
]

description = "A library implementing HPACK coding, for the hring project"
repository = "https://github.com/hapsoc/hring"
homepage = "https://github.com/hapsoc/hring"
readme = "README.md"
license = "MIT"
keywords = ["hpack", "http2", "encoding", "decoding"]
documentation = "https://docs.rs/hpack-hring"

[dev-dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
hex = "0.4.3"
thiserror = "1.0.38"

[dependencies]
tracing = "0.1"
