[package]
name = "httpwg-cli"
version = "0.2.2"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bearcove/loona"
documentation = "https://docs.rs/httpwg-cli"
description = """
A CLI able to run httpwg test cases (h2spec replacement)
"""
rust-version = "1.75"

[[bin]]
name = "httpwg"
path = "src/main.rs"

[dependencies]
color-eyre = "0.6.3"
eyre = "0.6.12"
buffet = { version = "0.2.2", path = "../buffet" }
httpwg = { version = "0.2.2", path = "../httpwg" }
lexopt = "0.3.0"
libc = "0.2.155"
tokio = { version = "1.39.2", features = ["time"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18" }
httpwg-macros = { version = "0.2.1", path = "../httpwg-macros" }
