[package]
name = "httpwg-hyper"
version = "0.2.0"
edition = "2021"
publish = false
authors = ["Amos Wenger <amos@bearcove.net>"]
description = """
A reference HTTP 1+2 server for httpwg, powered by hyper
"""

[dependencies]
bytes = "1.7.1"
futures = "0.3.30"
http-body-util = "0.1.2"
hyper = { version = "1.4.1", features = ["client", "server", "http1", "http2"] }
hyper-util = { version = "0.1.7", features = [
    "server",
    "http1",
    "http2",
    "tokio",
] }
pin-project-lite = "0.2.14"
tokio = { version = "1.39.2", features = ["full"] }
tokio-stream = "0.1.15"
tokio-util = { version = "0.7.11", features = ["io"] }
tracing = "0.1.40"
