[package]
name = "httpwg-loona"
version = "0.2.0"
edition = "2021"
publish = false
authors = ["Amos Wenger <amos@bearcove.net>"]
description = """
A reference HTTP 1+2 server for httpwg, powered by loona
"""

[lib]
name = "httpwg_loona"
path = "src/lib.rs"

[[bin]]
name = "httpwg-loona"
path = "src/main.rs"

[[bench]]
name = "h2load"
harness = false

[dependencies]
color-eyre = "0.6.3"
loona = { version = "0.3.0", path = "../loona" }
buffet = { version = "0.3.0", path = "../buffet" }
tracing = { version = "0.1.40" }
tracing-subscriber = "0.3.18"
tokio = { version = "1.39.2", features = ["macros", "sync", "process"] }
eyre = { version = "0.6.12", default-features = false }
b-x = { version = "1.0.0", path = "../b-x" }
rcgen = { version = "0.13.1", default-features = false, features = ["aws_lc_rs"] }
tokio-rustls = "0.26.0"
ktls = "6.0.0"

[dev-dependencies]
codspeed-criterion-compat = "2.6.0"
