[package]
name = "httpwg-loona"
version = "0.2.0"
edition = "2021"
publish = false
authors = ["Amos Wenger <amos@bearcove.net>"]
description = """
A reference HTTP 1+2 server for httpwg, powered by loona
"""

[dependencies]
color-eyre = "0.6.3"
loona = { version = "0.3.2", path = "../loona" }
buffet = { version = "0.3.1", path = "../buffet" }
tracing = { version = "0.1.40" }
tracing-subscriber = "0.3.18"
tokio = { version = "1.39.2", features = ["macros", "sync", "process"] }
eyre = { version = "0.6.12", default-features = false }
b-x = { version = "1.0.1", path = "../b-x" }
rcgen = { version = "0.13.1", default-features = false, features = [
    "aws_lc_rs",
] }
httpwg-harness = { version = "0.1.0", path = "../httpwg-harness" }
socket2 = "0.5.7"

[target.'cfg(target_os = "linux")'.dependencies]
ktls = "6.0.0"
tokio-rustls = "0.26.0"
