[package]
name = "httpwg-macros"
version = "0.2.5"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bearcove/loona"
documentation = "https://docs.rs/httpwg-macros"
readme = "README.md"
description = """
Macros to allow generating httpwg unit tests
"""
rust-version = "1.75"

[dependencies]
httpwg = { version = "0.2.7", path = "../httpwg" }
