[package]
name = "httpwg"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bearcove/fluke"
documentation = "https://docs.rs/httpwg"
readme = "README.md"
description = """
Test cases for RFC 9113 (HTTP/2)
"""
rust-version = "1.75"

[dependencies]
bytes = "1.5.0"
enumflags2 = "0.7.9"
eyre = "0.6.12"
fluke-buffet = { version = "0.2.0", path = "../fluke-buffet" }
fluke-h2-parse = { version = "0.1.1", path = "../fluke-h2-parse" }
fluke-hpack = { version = "0.3.1", path = "../fluke-hpack" }
futures-util = "0.3.30"
pretty-hex = "0.4.1"
tokio = { version = "1.37.0", features = ["time"] }
tracing = "0.1.40"
